# controllers/courier.controller.js
@@ -74,6 +74,20 @@ class CourierController {
     }
   }
 
+  async findWhereDidHeGo (req, res, next) {
+    try {
+      const resultCheck = await this._validator.checkFilter(req);
+      if (!resultCheck.isValid) {
+        return next(new httpErrors.UnprocessableEntity(JSON.stringify(resultCheck.errors)));
+      }
+      const { filter } = req.query;
+      const result = await this._service.findWhereDidHeGo(filter);
+      res.json(result);
+    } catch (err) {
+      next(err);
+    }
+  }
+
   async deleteOne (req, res) {
     const { id } = req.params;
     await this._service.deleteOne(id);
@@ -107,6 +121,11 @@ courier.get('/:id(\\d+)', async (req, res, next) => {
 // Get many couriers
 courier.get('', async (req, res, next) => {
   await courierController.find(req, res, next);
+});
+
+// Get many couriers
+courier.get('/where-did-he-go', async (req, res, next) => {
+  await courierController.findWhereDidHeGo(req, res, next);
 });
 
 courier.delete('/:id', async (req, res) => {
